--- a/css/cfe.css
+++ b/css/cfe.css
@@ -1,12 +1,3 @@
-.clearfix:after {
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
-}
-.clearfix {display: inline-block;}  /* for IE/Mac */
-
 form{clear:both;}
 
 form ul{
@@ -19,8 +10,8 @@ form ul li{
 	padding:3px;
 }
 
-label.jsTextL ,label.jsPasswordL, label.jsFileL, label.jsSelectorL,
-.jsTextL span.label, .jsPasswordL span.label{
+label.jsTextL ,label.jsPasswordL, label.jsFileL, label.jsSelectorL, label.jsTextareaL,
+.jsTextL span.label, .jsPasswordL span.label, .jsTextareaL span.label, .jsFileL span.label{
 	float:left;
 	margin-right: 5px;
 	padding:4px 0;
@@ -38,34 +29,33 @@ label.jsTextL ,label.jsPasswordL, label.jsFileL, label.jsSelectorL,
 /*  classes can be used in any combination		*/
  /**********************************************/
 
- form *:focus{outline: none;}
+input[name="radio2[hallo]"]{
+    width: 300px;
+}
+
+form *:focus{outline: none;}
 
  /* fieldsets */
- /*fieldset.F{
- 	border: 1px dotted #cc3300;
+fieldset{
+ 	border: 2px solid #ccc;
  }
 
- fieldset.F legend{
-	background-color: #cc3300;
- }*/
-
- fieldset.H{
+ fieldset.H, fieldset.F{
  	border: 2px dashed #F0E68C;
 	background-color: #FFFFF0;
  }
 
- fieldset.H legend{
+fieldset.H legend{
+    background-color: #FFFFF0;
+}
+
+fieldset.F legend, fieldset.P legend{
 	background-color: #F0E68C;
  }
 
- fieldset.A{
- 	background-color: #F0FFFF;
-	border-color: #40E0D0;
- }
-
- fieldset.A legend{
- 	background-color: #40E0D0;
- }
+fieldset.P, fieldset.F{
+    border: 2px solid #F0E68C;
+}
 
 /* labels */
 label{cursor:pointer;}
@@ -102,21 +92,37 @@ label.F{color:#cc3300;}
 .jsTextSlide.F .jsText,.jsPasswordSlide.F .jsPassword{background-position: 100% -40px;}
 
 /* teaxtareas with sliding doors */
+.jstextarea1 textarea
+{
+    height: 140px;
+    width: 300px;
+}
+
 .jsTextareaSlide{
 	float:left;
-	background: url(../gfx/cfeTextareaR.gif) no-repeat right top;
+	background: url(../gfx/cfeTextareaB.gif) no-repeat right bottom;
 }
+
+.jsTextareaSlide1{
+	float:left;
+	background: url(../gfx/cfeTextareaT.gif) no-repeat left top;
+}
+
+.jsTextareaSlide2{
+	float:left;
+	background: url(../gfx/cfeTextareaTR.gif) no-repeat right top;
+}
+
 .jsTextareaSlide .jsTextarea{
 	float:left;
-	background: url(../gfx/cfeTextareaL.gif) no-repeat left top;
+	background: url(../gfx/cfeTextareaBL.gif) no-repeat left bottom;
 	border:0;margin:0;
-	min-width: 200px;
 	padding: 5px 6px;
-	height: 108px;
 }
-.jsTextareaSlide.F{background-position: 100% -120px;}
 
-.jsTextareaSlide.F .jsTextarea{background-position: 0 -120px;}
+.jsTextareaSlide.F .jsTextareaSlide1{background-image: url(../gfx/cfeTextareaT-H.gif);}
+.jsTextareaSlide.F .jsTextareaSlide2{background-image: url(../gfx/cfeTextareaTR-H.gif);}
+.jsTextareaSlide.F .jsTextarea{background-image: url(../gfx/cfeTextareaBL.gif);}
 
 /* checkboxes and radiobuttons */
 .jsCheckbox img,.jsRadiobutton img{
@@ -157,14 +163,14 @@ label.F{color:#cc3300;}
 
 
 /* file input */
-.jsFileWrapper{
+.jsFile{
 	width: 125px;
 	height: 26px;
 	background: url(../gfx/cfeFile.gif) no-repeat 0 3px;
 }
-.jsFileWrapper.H{background-position:0 -76px;}
+.jsFile.H{background-position:0 -76px;}
 
-.jsFileWrapper,.jsFileL{
+.jsFile,.jsFileL{
 	float:left;display:inline;
 }
 
@@ -175,19 +181,20 @@ label.F{color:#cc3300;}
 }
 .jsFilePath.hidden{display:none;}
 
+.jsFile.hidden{position: absolute; left: -999px;}
+
 .jsFilePath *{
 	vertical-align: middle;
 }
-.jsFilePath img{
+.jsFilePath .fileIcon{
 	width: 16px;height:16px;
 	margin-right: 3px;
 	background-image:url(../gfx/fileicons/file.gif);
 }
-.jsFilePath img.delete{
-	width: 16px;height:16px;
+.jsFilePath .delete .spc{
+	width: 16px; height:16px;
 	margin-left: 5px;
 	background-image:url(../gfx/cross.gif);
-	cursor: pointer;
 }
 
 .jsFilePath img.pdf{background-image:url(../gfx/fileicons/pdf.gif)}
@@ -209,23 +216,30 @@ label.F{color:#cc3300;}
 	  and you may delete the ".js*******Slide"-parts
 */
 .jsSubmit,.jsReset{
-	width: auto;
-	background: url(../gfx/cfeButtonL.gif) no-repeat left top;
-	text-align:center;
-	padding: 2px 0 5px 0;
-}
-.jsSubmitSlide,.jsResetSlide{
-	height: 100%;
 	background: url(../gfx/cfeButtonR.gif) no-repeat right top;
-	padding: 2px 0 5px 0;
+	text-align:center;
+    float:left;
+    display: inline;
+    padding: 0 15px;
 }
 
-*+html .jsSubmit{padding:0;}
-*+html .jsReset{padding:0;}
+.jsButton.jsSubmit, .jsButton.jsReset{
+    background: none;
+}
+
+.jsSubmitSlide, .jsResetSlide{
+    background: url(../gfx/cfeButtonL.gif) no-repeat left top;
+    float:left;
+    display: inline;
+}
 
 .jsButton .label{
-	line-height: 2em;
-	padding: 0 15px;
+    line-height: 1.75em;
+    float: left;
+    width: 100%;
+    height: 100%;
+    display: inline;
+    padding: 1px;
 	/*uncomment this to hide the buttons text */
 	/*visibility:hidden;*/
 }
@@ -241,28 +255,44 @@ label.F{color:#cc3300;}
 .jsButton.F.P span{background-position: 100% -160px;}
 .jsButton.H.P span{background-position: 100% -40px;}
 
-/* selector boxes */
-.jsSelector1{width: 200px;}
-.jsSelector0{width: 283px;}
+.jsButton.P .label{padding: 2px 0 0 2px;color: #666;}
 
-.jsSelectorSingle{
-    height: 30px;
+ /*############################################*/
+/*  select boxes                    			*/
+ /*############################################*/
+ /*--------------------------------------------*/
+/*  select boxes - custom styles 				*/
+ /*--------------------------------------------*/
+.jsSelector{height: 30px;}
+.jsSelector0{width: 283px;}
+.jsSelector0 .jsSelectorContent{width: 245px;}
+
+.jsSelector1{width: 220px;}
+.jsSelector1 .jsSelectorContent{width: 180px;}
+
+.jsSelector .jsSelectorContentSlide1{
+    margin: -3px 0 0 5px;
 }
 
+.jsSelectorMultiple0 .jsSelectorContent{width: 283px;}
+
+ /*--------------------------------------------*/
+/*  select boxes - general styles 				*/
+ /*--------------------------------------------*/
 .jsSelector{
-	cursor: pointer;
-	float:left;
+	float: left;
 	background: url(../gfx/cfeSelectL.gif) no-repeat left top;
 }
 
-.jsSelectorMultiple{
+.jsSelectorMultiple
+{
     background: none;
+    height: auto;
 }
 
 .jsSelector.H{background-position: 0 -40px;}
 .jsSelector.F{background-position: 0 -80px;}
 .jsSelector.F .jsSelectorSlide{background-position: 100% -80px;}
-
 .jsSelector.H .jsSelectorArrow{background-position: 3px -36px}
 
 .jsSelectorArrow{
@@ -270,7 +300,6 @@ label.F{color:#cc3300;}
 	background: url(../gfx/cfeSelectorArrow.gif) no-repeat 3px 4px;
 	margin-right: 7px;
 }
-
 .jsSelectorSlide{
 	float:left;
 	width: 100%;
@@ -278,46 +307,47 @@ label.F{color:#cc3300;}
 	padding: 6px 0 4px 0;
 }
 
-
 .jsSelector .jsOptionSelected{padding:0 0 0 8px;margin:0 0 0 5px;}
 
-.jsSelectorMultiple .jsOption img{
-	vertical-align: middle;
-	width: 20px;
-	height: 20px;
-	background: no-repeat 0 0;
-    margin-right: 5px;
-}
-.jsSelectorMultiple .jsOption{background-color: #fff;}
-.jsSelectorMultiple .jsOption img{background-image: url(../gfx/checkboxes.png);}
-.jsSelectorMultiple .jsOption.A img{background-position: 0 -40px;}
-.jsSelectorMultiple .jsOption.H img{background-position: 0 -80px;}
-.jsSelectorMultiple .jsOption.H.A img{background-position: 0 -120px;}
-
-
-.jsSelectorCWrapper{
-	margin: -3px 0 0 0;
-	background: url(../gfx/cfeSelector1B.gif) no-repeat 5px 100%;
-}
-
-.jsSelectorContent{
-	width: 247px;height: 120px;
-	padding: 3px 0 2px 8px;
-	background: url(../gfx/cfeSelector1T.gif) no-repeat 5px 0;
-}
-
 .jsOption{
-	padding: 6px 0 4px 5px;
+	padding: 6px 6px 4px 5px;
 	cursor: pointer;
 	color: #009999;
 	height: 20px;
 }
-.jsSelectorContent .H{color: #FFFFFF;background-color: #666;}
 
-.jsOption{margin-right: 3px;}
+.jsOption.H, .jsOption.H label.H
+{
+    background-color: #666;
+    color: #fff;
+}
 
-.jsSelectorScrollerWrapper {background-color: #fff; margin: 3px 3px 0 0;}
-.jsSelectorScrollerWrapper img{width: 17px;height: 13px;display:block;cursor:pointer;}
-.jsSelectorScrollerWrapper .scrollTop{background: url(../gfx/scrollUp.gif) no-repeat 3px 3px;}
+.jsSelectorContainer, .jsSelectorScrollerWrapper{
+    float: left;
+}
+.jsSelectorScrollerWrapper .spc{width: 17px;height: 13px;display:block;cursor:pointer;}
+.jsSelectorScrollerWrapper .scrollTop .spc{background: url(../gfx/scrollUp.gif) no-repeat 3px 3px;}
 .jsSelectorScrollerWrapper .scrollKnob{background: url(../gfx/scrollKnob.gif) no-repeat 3px 0;}
-.jsSelectorScrollerWrapper .scrollBottom{background: url(../gfx/scrollDown.gif) no-repeat 3px 3px;}
+.jsSelectorScrollerWrapper .scrollBottom .spc{background: url(../gfx/scrollDown.gif) no-repeat 3px 3px;}
+
+.jsSelectorContentSlide1{
+	float:left;
+	background: url(../gfx/cfeTextareaB.gif) no-repeat right bottom;
+}
+
+.jsSelectorContentSlide2{
+	float:left;
+	background: url(../gfx/cfeTextareaT.gif) no-repeat left top;
+}
+
+.jsSelectorContentSlide3{
+	float:left;
+	background: url(../gfx/cfeTextareaTR.gif) no-repeat right top;
+}
+
+.jsSelectorContentSlide1 .jsSelectorContent{
+	float:left;
+	background: url(../gfx/cfeTextareaBL.gif) no-repeat left bottom;
+	border:0; margin:0;
+	padding: 3px 3px 4px 3px;
+}
