--- a/docs/assets/api.css
+++ b/docs/assets/api.css
@@ -17,6 +17,13 @@ a:visited { color: #003399;}
 
 }
 
+#donate{
+    position: absolute;
+    right: .5em;
+    top: 1em;
+    padding: 18px 15px 12px;
+}
+
 #doc3 #hd h1 {
     color: #545454;
     font-size: 170%;
