--- a/docs/assets/api.css
+++ b/docs/assets/api.css
@@ -41,6 +41,9 @@ a:visited { color: #003399;}
     color: #000;
     text-decoration: none;
 }
+
+#doc3 #hd h1 a:hover{text-decoration: underline;}
+
 #doc3 #hd .path a { text-decoration: none; color: #FDD501; }
 #doc3 #hd .path {
     background: #525658;
