further porting to mootools 1.3; partially working again; checkboxes/input type image and all modules based on these ones not working

--- a/css/cfe.css
+++ b/css/cfe.css
@@ -242,6 +242,7 @@ label.D{cursor: default}
   border: none;
   line-height: 100%;
   height: 24px;
+  width: auto;
 }
 
 .cfeText.F, .cfePassword.F{background-position: 0 -40px}
